--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+    <header class="header">
+        <section class="header__blue-box">
+            <h1>We´ve got you Covered.</h1>
+            <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured  all day long. 
+                You get it all for as little as <span>$0.4 per pay.</span></p>
+            <button class="button">JOIN NOW</button>
+        </section>
+        <section class="header__orange-box">
+            <p>What do we have to offer?</p>
+            <h2>Learn more</h2>
+        </section>
+        <section class="header__yellow-box">
+            <p>What are you waiting for?</p>
+            <h2>Join today</h2>
+        </section>
+        <section class="header__nav">
+        <nav >
+            <ul>
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>Our offer</li></a>
+                <a href="#"><li>Why us</li></a>
+                <a href="#"><li>Contact</li></a>
+            </ul>
+        </nav>
+        </section>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+</div>
 </body>
 </html>
