--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
             <p>What are you waiting for?</p>
             <h2>Join today</h2>
         </section>
-        <section class="header__nav">
-        <nav >
+        <nav>
             <ul>
-                <a href="#"><li>Home</li></a>
+                <a href="#"><li class="header__nav-home">Home</li></a>
                 <a href="#"><li>Our offer</li></a>
                 <a href="#"><li>Why us</li></a>
                 <a href="#"><li>Contact</li></a>
             </ul>
         </nav>
-        </section>
     </header>
 
     <main>
