--- a/index.html
+++ b/index.html
@@ -35,6 +35,44 @@
     </header>
 
     <main>
+        <section class="large__gray">
+            <div>
+            <h2>Your personal financial safety net online.</h2>
+                <button class="button">JOIN NOW</button>
+            </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas. Etiam consectetur finibus facilisis.
+                    Proin accumsan auctor purus, quis finibus tellus accumsan id. Quisque tellus elit, ullamcorper sed mollis ac, interdum vel enim.
+                    Pellentesque congue felis eget lorem tempor blandit. Mauris hendrerit ullamcorper ex quis congue donec vel finibus libero.</p>
+        </section>
+
+        <section class="large__yellow">
+            <section class="cards">
+                <section class="card">
+                    <div><img src="grupparbete-examination-main/img/child.png"></div>
+                    <h4>Children</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
+                        Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+                </section>
+                <section class="card">
+                    <div><img src="grupparbete-examination-main/img/adult.png"></div>
+                    <h4>Just right</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
+                        Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+                </section>
+                <section class="card">
+                    <div><img src="grupparbete-examination-main/img/old.png"></div>
+                    <h4>Old fart</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
+                        Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+                </section>
+            </section>
+            <h2>About us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo sapien congue ac.
+                Integer a elit lorem. Vestibulum id venenatis diam, et eleifend augue. Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. Aenean ullamcorper nibh vitae orci laoreet,
+                eu dictum nisi ultrices. Sed condimentum nibh neque, at ultricies augue facilisis non.
+
+                Pellentesque a tellus mauris. Nam sodales pretium rutrum. Aenean imperdiet, leo nec consectetur blandit, risus erat commodo tortor, sit amet dignissim orci lorem vel felis. Ut tempus dignissim.</p>
+        </section>
 
     </main>
 
