main and footer

--- a/index.html
+++ b/index.html
@@ -66,17 +66,51 @@
                         Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
                 </section>
             </section>
+            <section class="about">
             <h2>About us</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo sapien congue ac.
                 Integer a elit lorem. Vestibulum id venenatis diam, et eleifend augue. Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. Aenean ullamcorper nibh vitae orci laoreet,
                 eu dictum nisi ultrices. Sed condimentum nibh neque, at ultricies augue facilisis non.
 
                 Pellentesque a tellus mauris. Nam sodales pretium rutrum. Aenean imperdiet, leo nec consectetur blandit, risus erat commodo tortor, sit amet dignissim orci lorem vel felis. Ut tempus dignissim.</p>
+            </section>
+        </section>
+
+        <section class="boxes">
+            <section class="box">
+                <h2>How<br>It Works?</h2>
+            </section>
+            <section class="box">
+                <h3>01</h3>
+                <p>Answer a few questions<br> about yourself</p>
+            </section>
+            <section class="box">
+                <h3>02</h3>
+                <p>Choose a plan.<br> Get a quote.</p>
+            </section>
+            <section class="box">
+                <h3>03</h3>
+                <p>Answer some questions about<br> your medical history.</p>
+            </section>
+            <section class="box">
+                <h3>04</h3>
+                <p>Wait 90 sec to get approved.</p>
+            </section>
+            <section class="box">
+                <h3>05</h3>
+                <p>Done!</p>
+            </section>
         </section>
 
     </main>
 
     <footer>
+        <nav>
+            <a><img src="grupparbete-examination-main/img/chevrons-up.svg" alt="arrow">
+            <p>Take me up again!</p></a>
+            
+        </nav>
+        <div></div>
 
     </footer>
 </div>
