added contact page

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </section>
         <nav>
             <ul>
-                <a href="#"><li class="header__nav-home">Home</li></a>
+                <a href="index.html"><li class="header__nav-home">Home</li></a>
                 <a href="#"><li>Our offer</li></a>
                 <a href="#"><li>Why us</li></a>
-                <a href="#"><li>Contact</li></a>
+                <a href="contact.html"><li>Contact</li></a>
             </ul>
         </nav>
     </header>
