--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,12 @@
         </section>
 
         <section class="map">
+          <section class="map__yellow-box">
+            <h2>Come visit us!</h2>
+            <p>2219  Griffin Street <br>
+              San Francisco</p>
+          </section>
+          <img src="grupparbete-examination-main/img/needle.png">
 
         </section>
 
