--- a/index.html
+++ b/index.html
@@ -9,110 +9,110 @@
 </head>
 <body>
     <div class="wrapper">
-    <header class="header">
-        <section class="header__blue-box">
-            <h1>We´ve got you Covered.</h1>
-            <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured  all day long. 
-                You get it all for as little as <span>$0.4 per pay.</span></p>
-            <button class="button">JOIN NOW</button>
-        </section>
-        <section class="header__orange-box">
-            <p>What do we have to offer?</p>
-            <h2>Learn more</h2>
-        </section>
-        <section class="header__yellow-box">
-            <p>What are you waiting for?</p>
-            <h2>Join today</h2>
-        </section>
-        <nav>
-            <ul>
-                <a href="index.html"><li class="header__nav-home">Home</li></a>
-                <a href="#"><li>Our offer</li></a>
-                <a href="#"><li>Why us</li></a>
-                <a href="contact.html"><li>Contact</li></a>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="large__gray">
-            <div>
-            <h2>Your personal financial safety net online.</h2>
+        <header class="header">
+            <section class="header__blue-box">
+                <h1>We´ve got you Covered.</h1>
+                <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured  all day long. 
+                    You get it all for as little as <span>$0.4 per pay.</span></p>
                 <button class="button">JOIN NOW</button>
-            </div>
+            </section>
+            <section class="header__orange-box">
+                <p>What do we have to offer?</p>
+                <h2>Learn more</h2>
+            </section>
+            <section class="header__yellow-box">
+                <p>What are you waiting for?</p>
+                <h2>Join today</h2>
+            </section>
+            <nav>
+                <ul>
+                    <a href="index.html"><li class="header__nav-home">Home</li></a>
+                    <a href="#"><li>Our offer</li></a>
+                    <a href="#"><li>Why us</li></a>
+                    <a href="contact.html"><li>Contact</li></a>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section class="large__gray">
+                <div>
+                    <h2>Your personal financial safety net online.</h2>
+                    <button class="button">JOIN NOW</button>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas. Etiam consectetur finibus facilisis.
                     Proin accumsan auctor purus, quis finibus tellus accumsan id. Quisque tellus elit, ullamcorper sed mollis ac, interdum vel enim.
                     Pellentesque congue felis eget lorem tempor blandit. Mauris hendrerit ullamcorper ex quis congue donec vel finibus libero.</p>
-        </section>
+            </section>
 
-        <section class="large__yellow">
-            <section class="cards">
-                <section class="card">
-                    <div><img src="grupparbete-examination-main/img/child.png"></div>
-                    <h4>Children</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
-                        Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+            <section class="large__yellow">
+                <section class="cards">
+                    <section class="card">
+                        <div><img src="grupparbete-examination-main/img/child.png"></div>
+                        <h4>Children</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
+                            Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+                    </section>
+                    <section class="card">
+                        <div><img src="grupparbete-examination-main/img/adult.png"></div>
+                        <h4>Just right</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
+                            Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+                    </section>
+                    <section class="card">
+                        <div><img src="grupparbete-examination-main/img/old.png"></div>
+                        <h4>Old fart</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
+                            Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+                    </section>
                 </section>
-                <section class="card">
-                    <div><img src="grupparbete-examination-main/img/adult.png"></div>
-                    <h4>Just right</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
-                        Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
-                </section>
-                <section class="card">
-                    <div><img src="grupparbete-examination-main/img/old.png"></div>
-                    <h4>Old fart</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas.
-                        Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
+                <section class="about">
+                    <h2>About us</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo sapien congue ac.
+                        Integer a elit lorem. Vestibulum id venenatis diam, et eleifend augue. Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. Aenean ullamcorper nibh vitae orci laoreet,
+                        eu dictum nisi ultrices. Sed condimentum nibh neque, at ultricies augue facilisis non.
+                    </p>
+                    <p>Pellentesque a tellus mauris. Nam sodales pretium rutrum. Aenean imperdiet, leo nec consectetur blandit, risus erat commodo tortor, sit amet dignissim orci lorem vel felis. Ut tempus dignissim.</p>
                 </section>
             </section>
-            <section class="about">
-            <h2>About us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo sapien congue ac.
-                Integer a elit lorem. Vestibulum id venenatis diam, et eleifend augue. Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. Aenean ullamcorper nibh vitae orci laoreet,
-                eu dictum nisi ultrices. Sed condimentum nibh neque, at ultricies augue facilisis non.
 
-                Pellentesque a tellus mauris. Nam sodales pretium rutrum. Aenean imperdiet, leo nec consectetur blandit, risus erat commodo tortor, sit amet dignissim orci lorem vel felis. Ut tempus dignissim.</p>
+            <section class="boxes">
+                <section class="box">
+                    <h2>How<br>It Works?</h2>
+                </section>
+                <section class="box">
+                    <h3>01</h3>
+                    <p>Answer a few questions<br> about yourself</p>
+                </section>
+                <section class="box">
+                    <h3>02</h3>
+                    <p>Choose a plan.<br> Get a quote.</p>
+                </section>
+                <section class="box">
+                    <h3>03</h3>
+                    <p>Answer some questions about<br> your medical history.</p>
+                </section>
+                <section class="box">
+                    <h3>04</h3>
+                    <p>Wait 90 sec to get approved.</p>
+                </section>
+                <section class="box">
+                    <h3>05</h3>
+                    <p>Done!</p>
+                </section>
             </section>
-        </section>
 
-        <section class="boxes">
-            <section class="box">
-                <h2>How<br>It Works?</h2>
-            </section>
-            <section class="box">
-                <h3>01</h3>
-                <p>Answer a few questions<br> about yourself</p>
-            </section>
-            <section class="box">
-                <h3>02</h3>
-                <p>Choose a plan.<br> Get a quote.</p>
-            </section>
-            <section class="box">
-                <h3>03</h3>
-                <p>Answer some questions about<br> your medical history.</p>
-            </section>
-            <section class="box">
-                <h3>04</h3>
-                <p>Wait 90 sec to get approved.</p>
-            </section>
-            <section class="box">
-                <h3>05</h3>
-                <p>Done!</p>
-            </section>
-        </section>
+        </main>
 
-    </main>
+        <footer>
+            <nav>
+                <a><img src="grupparbete-examination-main/img/chevrons-up.svg" alt="arrow">
+                <p>Take me up again!</p></a>
+                
+            </nav>
+            <div></div>
 
-    <footer>
-        <nav>
-            <a><img src="grupparbete-examination-main/img/chevrons-up.svg" alt="arrow">
-            <p>Take me up again!</p></a>
-            
-        </nav>
-        <div></div>
-
-    </footer>
-</div>
+        </footer>
+    </div>
 </body>
 </html>
