--- a/contact.html
+++ b/contact.html
@@ -9,52 +9,47 @@
 </head>
 <body>
     <div class="wrapper">
-    <header class="header">
-        <section class="header__contact-starter">
-            <h1>Oh hello there!</h1>
-        </section>
-        <nav>
-            <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="#"><li>Our offer</li></a>
-                <a href="#"><li>Why us</li></a>
-                <a href="contact.html"><li class="header__nav-home">Contact</li></a>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="large__gray-contact">
-          <h2>Whats on your mind?</h2>
-          <section class="form">
-            <form>
-              <label for="email">Your email</label>
-              <input type="email" id="email" name="email" class="email">
-              <label for="message">Your message</label>
-              <textarea id="message" name="message" class="message">Dear Insurance company...</textarea>
-              <button class="button">SEND MESSAGE</button>
-            </form>
+      <header class="header">
+          <section class="header__contact-starter">
+              <h1>Oh hello there!</h1>
           </section>
-        </section>
+          <nav>
+              <ul>
+                  <a href="index.html"><li>Home</li></a>
+                  <a href="#"><li>Our offer</li></a>
+                  <a href="#"><li>Why us</li></a>
+                  <a href="contact.html"><li class="header__active">Contact</li></a>
+              </ul>
+          </nav>
+      </header>
 
-        <section class="map">
-          <section class="map__yellow-box">
-            <h2>Come visit us!</h2>
-            <p>2219  Griffin Street <br>
-              San Francisco</p>
+      <main>
+          <section class="large__gray-contact">
+            <h2>Whats on your mind?</h2>
+            <section class="form__container">
+              <form>
+                <label for="email">Your email</label>
+                <input type="email" id="email" name="email" class="email">
+                <label for="message">Your message</label>
+                <textarea id="message" name="message" class="message">Dear Insurance company...</textarea>
+                <button class="button">SEND MESSAGE</button>
+              </form>
+            </section>
           </section>
-          <img src="grupparbete-examination-main/img/needle.png">
 
-        </section>
+          <section class="map">
+            <section class="map__yellow-box">
+              <h2>Come visit us!</h2>
+              <p>2219  Griffin Street <br>
+                San Francisco</p>
+            </section>
+            <img src="grupparbete-examination-main/img/needle.png">
+          </section>
+      </main>
 
-
-    </main>
-
-    <footer>
-
-        <div></div>
-
-    </footer>
+      <footer>
+          <div></div>
+      </footer>
 </div>
 </body>
 </html>
