--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header" id="top">
             <section class="header__blue-box">
                 <h1>We´ve got you Covered.</h1>
                 <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured  all day long. 
@@ -26,7 +26,7 @@
             </section>
             <nav>
                 <ul>
-                    <a href="index.html"><li class="header__nav-home">Home</li></a>
+                    <a href="index.html"><li class="header__active">Home</li></a>
                     <a href="#"><li>Our offer</li></a>
                     <a href="#"><li>Why us</li></a>
                     <a href="contact.html"><li>Contact</li></a>
@@ -66,6 +66,7 @@
                             Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
                     </section>
                 </section>
+
                 <section class="about">
                     <h2>About us</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo sapien congue ac.
@@ -101,17 +102,14 @@
                     <p>Done!</p>
                 </section>
             </section>
-
         </main>
 
         <footer>
             <nav>
-                <a><img src="grupparbete-examination-main/img/chevrons-up.svg" alt="arrow">
-                <p>Take me up again!</p></a>
-                
+                <a href="#top"><img src="grupparbete-examination-main/img/chevrons-up.svg" alt="arrow">
+                    Take me up again!</a> 
             </nav>
             <div></div>
-
         </footer>
     </div>
 </body>
