--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
           <section class="header__contact-starter">
               <h1>Oh hello there!</h1>
           </section>
-          <nav>
+          <nav class="nav2">
               <ul>
                   <a href="index.html"><li>Home</li></a>
                   <a href="#"><li>Our offer</li></a>
